fix parts of the text being cut off when resizing

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -7,19 +7,23 @@
   text-align: center;
   color: white;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 
 .centered {
+  width: 90%;
+  font-weight: bold;
+  font-size: 3em;
+}
+
+.imagebar {
   position: absolute;
   top: 12%;
   width: 100%;
   background-color: #00000088;
-  font-size: 3em;
   padding: 10px;
-  font-weight: bold;
-  flex-wrap: wrap;
 }
 .page {
   display: flex;
